--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
-    "sass": "^1.56.1",
+    "sass": "^1.54.9",
     "vite": "^3.1.8"
   }
 }
